Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8316297

GenShen: Degenerated GCs fail to make progress

XMLWordPrintable

    • gc

      If concurrent GC degenerates during marking, the degen GC fails to make progress because the evacuation budget fails to include memory that had been reserved for the Collector.

      Reproducer:

      echo Run OpenJDKTip GenShen GC with memory size 54g with 6s customer period
      >&2 echo Run OpenJDKTip GenShen GC with memory size 54g with 6s customer period
      ~/github/shenandoah.experiments.9-11-2023/build/linux-x86_64-server-release/jdk/bin/java \
        -XX:+UnlockExperimentalVMOptions \
        -XX:-ShenandoahPacing \
        -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -Xms54g -Xmx54g \
        -XX:+UseShenandoahGC \
        -XX:ShenandoahGCMode=generational \
        -Xlog:"gc*=info,ergo" \
        -XX:+UnlockDiagnosticVMOptions \
        -jar ~/github/heapothesys/Extremem/target/extremem-1.0-SNAPSHOT.jar \
        -dInitializationDelay=45s -dDictionarySize=16000000 -dNumCustomers=28000000 \
        -dNumProducts=64000 -dCustomerThreads=2000 -dCustomerPeriod=6s -dCustomerThinkTime=1s \
        -dKeywordSearchCount=4 -dServerThreads=5 -dServerPeriod=5s -dProductNameLength=10 \
        -dBrowsingHistoryQueueCount=5 \
        -dSalesTransactionQueueCount=5 \
        -dProductDescriptionLength=64 -dProductReplacementPeriod=25s -dProductReplacementCount=5 \
        -dCustomerReplacementPeriod=30s -dCustomerReplacementCount=1000 -dBrowsingExpiration=1m \
        -dPhasedUpdates=true \
        -dPhasedUpdateInterval=60s \
        -dSimulationDuration=20m -dResponseTimeMeasurements=100000

      Build:
      commit 69aa97198c4e71051492f368e37aa50fc75834ee (HEAD -> experiments-9-11, origin/master, origin/HEAD, master)
      Author: William Kemper <wkemper@openjdk.org>
      Date: Fri Sep 8 17:40:46 2023 +0000

            kdnilsen Kelvin Nilsen
            kdnilsen Kelvin Nilsen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: