8316297: GenShen: Degenerated GCs fail to make progress

Reviewed-by: wkemper