src/hotspot/share/gc/shenandoah/shenandoahYoungGeneration.hpp
@@ -64,6 +64,9 @@ public:
   }
 
   size_t available() const override;
+
+  // Do not override available_with_reserve() because that needs to see memory reserved for Collector
+
   size_t soft_available() const override;
 };
 
